# swipe

./: Cargo.toml  README.md  test.txt
src/: category.rs  main.rs  organizer.rs
